examples/test/testpolicy10716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10716
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key39: value4
      key36: value32
      key1: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value29
      podSelector:
        matchLabels:
          key20: value2
          key9: value48
